[gd_scene load_steps=4 format=3 uid="uid://cwcwu4ffdagc6"]

[ext_resource type="Script" path="res://game/main.gd" id="1_7po52"]
[ext_resource type="PackedScene" uid="uid://rwd0dn0askpt" path="res://game/player.tscn" id="1_pqh5f"]
[ext_resource type="PackedScene" uid="uid://cct522b5qqg1p" path="res://game/level0.tscn" id="2_fiv6v"]

[node name="Main" type="Node"]
script = ExtResource("1_7po52")
startup_level = ExtResource("2_fiv6v")
start_at_main_menu = false

[node name="World" type="Node2D" parent="."]

[node name="Player" parent="World" instance=ExtResource("1_pqh5f")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MainMenu/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "GMTK 2023"

[node name="StartButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="QuitButton" type="Button" parent="UI/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[connection signal="pressed" from="UI/MainMenu/MarginContainer/VBoxContainer/StartButton" to="." method="_on_main_menu_start_button_pressed"]
[connection signal="pressed" from="UI/MainMenu/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_main_menu_quit_button_pressed"]
